--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -82,7 +82,7 @@ env:
 #  try to add commit status or something to CI/CD flow
 #fixme: try replace all ssh and scp action with raw bash command
 
-# fixme: replace docker hub with github registry
+# fixme: replace docker hub with github registry because docker hub has limit to 200 pull requests per 6 hours
 jobs:
     # unit-test-at-install:
     #     name: ${{inputs.repo_name}} - Unit test at install
