--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -71,6 +71,7 @@ env:
     SERVER_DEPLOY_PATH: ${{ vars.SERVER_DEPLOY_PATH }}
     SERVER_ODOO_URL: ${{ vars.SERVER_ODOO_URL }}
     SERVER_ODOO_DB_NAME: ${{ vars.SERVER_ODOO_DB_NAME }}
+    SERVER_BACKUP_PATH: ${{ vars.SERVER_BACKUP_PATH }}
 
     # ===== Handle Input for actions/github-script ======
     INPUT_REPO_NAME: ${{inputs.repo_name}}
@@ -161,10 +162,11 @@ jobs:
             - name: Test Preparation
               uses: ./.github/actions/test-preparation
 
-            # TODO: add backup path to env, if this param is provided
+            # fixme: add backup path to env, if this param is provided
 
             - name: Upload backup script file to server
               uses: ./.github/actions/scp-ssh
+              if: ${{env.SERVER_BACKUP_PATH != ''}}
               with:
                   direction: "upload"
                   host: ${{env.SERVER_HOST}}
@@ -176,13 +178,20 @@ jobs:
 
             - name: "Backup Odoo on server"
               uses: ./.github/actions/ssh-script
+              id: backup-on-server
               with:
                   host: ${{env.SERVER_HOST}}
                   port: ${{env.SERVER_SSH_PORT}}
                   user: ${{env.SERVER_USER}}
                   ssh_key_text: ${{ secrets.SERVER_PRIVATE_KEY }}
                   script: |
-                      bash ${{ env.SERVER_CICD_SCRIPT_FOLDER }}/server-backup.sh "${{env.SERVER_DEPLOY_PATH}}" "${{env.SERVER_ODOO_DB_NAME}}" "${{secrets.SERVER_DB_PASSWORD}}" "${{env.ODOO_IMAGE_TAG_DEPLOY}}" ${{ env.GITHUB_RUN_ATTEMPT }} "${{ env.SERVER_BACKUP_FOLDER }}"
+                      if [[ -z ${{env.SERVER_BACKUP_PATH}} ]]; then
+                        # fixme: get latest backup file and return
+                        latest_file=$(find ${{env.SERVER_BACKUP_PATH}} -type f | grep -E '[0-9]{4}-[0-9]{2}-[0-9]{2}_[0-9]{2}-[0-9]{2}-[0-9]{2}.zip'  | sort -n | tail -1 | cut -d' ' -f2-) && echo "Latest file: $latest_file"
+
+                      else
+                        bash ${{ env.SERVER_CICD_SCRIPT_FOLDER }}/server-backup.sh "${{env.SERVER_DEPLOY_PATH}}" "${{env.SERVER_ODOO_DB_NAME}}" "${{secrets.SERVER_DB_PASSWORD}}" "${{env.ODOO_IMAGE_TAG_DEPLOY}}" ${{ env.GITHUB_RUN_ATTEMPT }} "${{ env.SERVER_BACKUP_FOLDER }}"
+                      fi
 
             - name: "Download backup file"
               uses: ./.github/actions/scp-ssh
@@ -192,7 +201,7 @@ jobs:
                   port: ${{env.SERVER_SSH_PORT}}
                   user: ${{env.SERVER_USER}}
                   local_file: ${{ env.LOCAL_BACKUP_FILE_PATH }}
-                  server_file: ${{ env.SERVER_LATEST_BACKUP_FILE_PATH }}
+                  server_file: ${{ steps.backup-on-server.outputs }}
                   ssh_key_text: ${{ secrets.SERVER_PRIVATE_KEY }}
 
             - name: "Run Integration test"
